--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "postcss-value-parser": "^4.2.0",
     "source-map-js": "^1.2.1",
     "update-browserslist-db": "^1.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tonyx8808/tailwind-css.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Tonyx8808/tailwind-css/issues"
+  },
+  "homepage": "https://github.com/Tonyx8808/tailwind-css#readme"
 }
